update from trunk

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,72 @@
+#*#
+*.a
+*.aps
+*.bak
+*.bsc
+*.class
+*.core
+*.dep
+*.dll
+*.err
+*.exe
+*.exp
+*.idb
+*.ilk
+*.ipch
+*.la
+*.lastbuildstate
+*.lastcodeanalysissucceeded
+*.lib
+*.lnk
+*.lo
+*.manifest
+*.map
+*.nativecodeanalysis.all.xml
+*.nativecodeanalysis.xml
+*.ncb
+*.o
+*.obj
+*.old
+*.opendb
+*.opensdf
+*.opt
+*.orig
+*.pch
+*.pdb
+*.plg
+*.pyc
+*.pyo
+*.rej
+*.res
+*.sbr
+*.sdf
+*.so
+*.so.*
+*.stackdump
+*.suo
+*.tlh
+*.tli
+*.tlog
+*.tmp
+*.unsuccessfulbuild
+*.user
+*.vcxprojResolveAssemblyReference.cache
+*.vspscc
+*.vssscc
 *~
-.*~
+.#*
+.*.swo
 .*.swp
+.DS_Store
+.cvsignore
+.swo
+.swp
+.viminfo
+.vs
+__pycache__
+__tags_*
+_sgbak
+_viminfo
+mssccprj.scc
+tags
+vssver.scc
